@@ -1,1 +1,1 @@
-11.4.0-rc3
+11.4.0
